--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,9 +79,13 @@
 
     <TextView
         android:id="@+id/login_error_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username/Password incorrect!"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:padding="10dp"
+        android:text="@string/username_password_incorrect"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:background="@color/red"
         android:visibility="gone"
