--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -13,6 +13,29 @@
             android:gravity="center"
             android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/report_title"
+                    android:textSize="18sp"
+                    android:padding="10dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/report_name_header"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/timestamp" />
+
+                <TextView
+                    android:id="@+id/timestamp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/date_created"
+                    android:padding="10dp"
+                    android:textSize="16sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/report_start_date_header"
+                    app:layout_constraintStart_toEndOf="@id/title" />
 
                 <TextView
                     android:id="@+id/report_name_header"
@@ -22,7 +45,7 @@
                     android:textStyle="bold"
                     android:padding="10dp"
                     android:gravity="start"
-                    android:text="Vacation Name"
+                    android:text="@string/vacation_name_header"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/report_recycler_view"
                     app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +59,7 @@
                     android:textStyle="bold"
                     android:padding="10dp"
                     android:gravity="start"
-                    android:text="Start Date"
+                    android:text="@string/start_date_header"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/report_recycler_view"
                     app:layout_constraintStart_toEndOf="@id/report_name_header"
@@ -50,7 +73,7 @@
                     android:textStyle="bold"
                     android:padding="10dp"
                     android:gravity="start"
-                    android:text="End Date"
+                    android:text="@string/end_date_header"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/report_recycler_view"
                     app:layout_constraintStart_toEndOf="@id/report_start_date_header"
@@ -64,7 +87,7 @@
                     android:textStyle="bold"
                     android:padding="10dp"
                     android:gravity="start"
-                    android:text="Accommodations"
+                    android:text="@string/accommodations_header"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/report_recycler_view"
                     app:layout_constraintStart_toEndOf="@id/report_end_date_header"
