--- a/app/src/main/res/layout-land/activity_report.xml
+++ b/app/src/main/res/layout-land/activity_report.xml
@@ -11,6 +11,7 @@
             android:layout_height="wrap_content"
             android:foregroundGravity="center"
             android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="horizontal">
 
                 <TextView
@@ -20,6 +21,7 @@
                     android:text="@string/report_title"
                     android:textSize="18sp"
                     android:padding="10dp"
+                    android:layout_marginTop="75dp"
                     android:textStyle="bold"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/report_name_header"
@@ -31,11 +33,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/date_created"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:textSize="16sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/report_start_date_header"
-                    app:layout_constraintStart_toEndOf="@id/title" />
+                    app:layout_constraintBaseline_toBaselineOf="@id/title"
+                    app:layout_constraintStart_toEndOf="@id/title"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
                 <TextView
                     android:id="@+id/report_name_header"
